--- a/part 1_en.html
+++ b/part 1_en.html
@@ -241,4 +241,7 @@ window.addEventListener('DOMContentLoaded',()=>{
   if('serviceWorker' in navigator) navigator.serviceWorker.register('sw.js');
 });
 </script>
+<p style="margin:20px 0;">
+  <a href="index_en.html">← Back to English index</a>
+</p>
 </body></html>
