--- a/part 5_en.html
+++ b/part 5_en.html
@@ -147,27 +147,35 @@ h1{text-align:center;margin-bottom:1rem;font-size:1.8rem}
 
 <script>
 const cards = [
-  {arabic:"\u0645\u0646 \u062d\u064a\u0646 \u0625\u0644\u0649 \u0622\u062e\u0631",english:"Occasional",french:"Occasionnel"},
-  {arabic:"\u063a\u064a\u0631 \u0631\u0633\u0645\u064a",english:"Casual",french:"Informel"},
-  {arabic:"\u0634\u062d\u0627\u0644 \u062f\u0627\u0628\u0627 \u0645\u0646 \u0643\u064a\u0644\u0648\u0645\u062a\u0631 \u063a\u0627\u062f\u064a \u0646\u0643\u0648\u0646\u0648\u0627 \u0636\u0631\u0628\u0646\u0627 \u062f\u0627\u0628\u0627",english:"How many miles have we driven by now?",french:"Combien de kilom\u00e8tres avons-nous parcouru maintenant ?"},
-  {arabic:"\u0643\u0627\u0646 \u0643\u064a\u062c\u0631\u064a \u0628\u0643\u0644 \u0642\u0635\u0631 \u062c\u0647\u062f\u0647",english:"He was running as fast as he could",french:"Il courait aussi vite qu'il pouvait"},
-  {arabic:"\u0623\u0644\u0645 \u0623\u0631\u0633\u0644\u0643 \u0644\u062a\u0630\u0647\u0628\u064a \u0648\u062a\u0646\u0627\u062f\u064a \u0644\u062c\u062f\u0643 \u0645\u0646 \u0623\u062c\u0644 \u0627\u0644\u0639\u0634\u0627\u0621",english:"Didn't I send you to call Grandpa for dinner?",french:"Ne t'ai-je pas envoy\u00e9e appeler grand-p\u00e8re pour le d\u00eener ?"},
-  {arabic:"\u0630\u0646\u0648\u0628",english:"Sins",french:"P\u00e9ch\u00e9s"},
-  {arabic:"\u0627\u0633\u062a\u0637\u0644\u0627\u0639 \u0627\u0644\u0631\u0623\u064a \u0627\u0644\u0639\u0627\u0645",english:"Opinion poll",french:"Sondage d'opinion"},
-  {arabic:"\u0647\u0630\u0627 \u0627\u0644\u0641\u064a\u0631\u0648\u0633 \u0642\u062f \u0623\u0638\u0647\u0631 \u0644\u0646\u0627 \u0627\u0644\u0639\u062f\u064a\u062f \u0645\u0646 \u0627\u0644\u0623\u0645\u0648\u0631",english:"This virus has shown us a lot of things",french:"Ce virus nous a montr\u00e9 beaucoup de choses"},
-  {arabic:"\u062d\u0633\u0646\u0629",english:"Good deed",french:"Bonne action"},
-  {arabic:"\u0627\u0644\u062a\u0641\u0627\u0647\u0629",english:"Insignificance",french:"Insignifiance"},
-  {arabic:"\u0627\u0644\u062d\u0643\u0648\u0645\u0629 \u062a\u0641\u0631\u0636 \u0627\u0644\u0642\u0627\u0646\u0648\u0646",english:"The government enforces the law",french:"Le gouvernement applique la loi"},
-  {arabic:"\u0625\u0646\u0647\u0645 \u064a\u062d\u0627\u0648\u0644\u0648\u0646 \u062a\u062d\u0631\u064a\u0641 \u0648\u0642\u0627\u0626\u0639 \u062a\u0627\u0631\u064a\u062e\u064a\u0629",english:"They intend to distort historical facts",french:"Ils cherchent \u00e0 d\u00e9former les faits historiques"},
-  {arabic:"\u0639\u0646\u062f\u0645\u0627 \u0627\u0633\u062a\u0648\u0644\u062a \u0627\u0644\u062c\u064a\u0648\u0634 \u0627\u0644\u0628\u0631\u064a\u0637\u0627\u0646\u064a\u0629 \u0639\u0644\u0649 \u0643\u064a\u0628\u064a\u0643 \u0639\u0627\u0645 1759",english:"When the British armies captured Quebec in 1759",french:"Lorsque les arm\u00e9es britanniques ont captur\u00e9 Qu\u00e9bec en 1759"},
-  {arabic:"\u0639\u0646\u062f\u0645\u0627 \u062a\u0642\u062a\u0631\u0628 \u0639\u0637\u0644\u0629 \u0631\u0623\u0633 \u0627\u0644\u0633\u0646\u0629 \u062f\u0627\u0626\u0645\u0627\u064b \u0646\u0634\u0639\u0631 \u0628\u0627\u0644\u0633\u0639\u0627\u062f\u0629",english:"When New Year's holiday approaches, we always feel happy",french:"Quand les vacances du Nouvel An approchent, nous ressentons toujours de la joie"},
-  {arabic:"\u064a\u0631\u063a\u0628\u0648\u0646 \u0641\u064a \u0627\u0633\u062a\u063a\u0644\u0627\u0644 \u0627\u0644\u0639\u062f\u064a\u062f \u0645\u0646 \u0627\u0644\u0623\u0645\u0648\u0631 \u0639\u0644\u0649 \u062d\u0633\u0627\u0628 \u0627\u0644\u0646\u0627\u0633",english:"They want to exploit many things at the expense of the people",french:"Ils veulent exploiter de nombreuses choses au d\u00e9triment des gens"},
-  {arabic:"\u062a\u062c\u0627\u0647\u0644 \u0634\u062e\u0635 \u0628\u0627\u0632\u062f\u0631\u0627\u0621: \u0627\u0644\u0631\u0626\u064a\u0633 \u062a\u062c\u0627\u0647\u0644 \u0643\u0644 \u0627\u0642\u062a\u0631\u0627\u062d \u0642\u062f\u0645\u0647 \u062a\u0648\u0645",english:"The boss snubbed every suggestion Tom made",french:"Le patron a ignor\u00e9 toutes les suggestions faites par Tom"},
-  {arabic:"\u0639\u0644\u0645 \u0627\u0644\u0641\u0644\u0643",english:"Astronomy",french:"Astronomie"},
-  {arabic:"\u0635\u0646\u062f\u0648\u0642 \u0627\u0644\u0646\u0642\u062f \u0627\u0644\u062f\u0648\u0644\u064a",english:"International Monetary Fund",french:"Fonds mon\u00e9taire international"},
-  {arabic:"\u062c\u0644\u062f",english:"Leather",french:"Cuir"},
-  {arabic:"\u0634\u0627\u0631\u0639 \u0636\u064a\u0642",english:"Narrow street",french:"Rue \u00e9troite"},
-  {arabic:"\u0623\u062c\u0646\u062f\u0629 \u0633\u064a\u0627\u0633\u064a\u0629 \u0645\u0639\u064a\u0646\u0629",english:"Political agenda",french:"Agenda politique"},
+  {arabic:"\u0645\u0639\u0648\u062c",english:"Crooked",french:"Tordu"},
+  {arabic:"\u0627\u062d\u062a\u0643\u0627\u0631",english:"Monopolization",french:"Monopole"},
+  {arabic:"\u063a\u064a\u0631 \u0635\u0628\u0631",english:"Hang in there",french:"Tiens bon"},
+  {arabic:"\u0643\u0646\u062d\u0627\u0648\u0644 \u0646\u0642\u0635 \u0645\u0646 \u0627\u0644\u0633\u0643\u0631",english:"I'm trying to cut down on sugar",french:"J'essaie de r\u00e9duire ma consommation de sucre"},
+  {arabic:"\u0642\u0627\u0637\u0639\u062a\u0643",english:"I cut you in",french:"Je t'ai interrompu"},
+  {arabic:"\u0628\u0646\u064a\u0629 \u0627\u0644\u062a\u062d\u062a\u064a\u0629",english:"Infrastructure",french:"Infrastructure"},
+  {arabic:"\u0627\u0644\u0627\u0643\u062a\u0641\u0627\u0621 \u0627\u0644\u0630\u0627\u062a\u064a\u060c \u062a\u0648\u0646\u0633 \u062a\u0647\u062f\u0641 \u0625\u0644\u0649 \u0627\u0644\u0627\u0643\u062a\u0641\u0627\u0621 \u0627\u0644\u0630\u0627\u062a\u064a \u0641\u064a \u0625\u0646\u062a\u0627\u062c \u0627\u0644\u0642\u0645\u062d",english:"Economic self-sufficiency. Tunisia aims for self-sufficiency in wheat production.",french:"Autosuffisance \u00e9conomique. La Tunisie vise l'autosuffisance en bl\u00e9."},
+  {arabic:"\u0644\u0648 \u0643\u0646\u062a \u0642\u062f \u0639\u0645\u0644\u062a \u0628\u062c\u062f \u0623\u0643\u062b\u0631\u060c \u0644\u0643\u0646\u062a \u0646\u062c\u062d\u062a \u0641\u064a \u0627\u0645\u062a\u062d\u0627\u0646\u0643",english:"If you had worked harder, you would have passed your exam.",french:"Si tu avais travaill\u00e9 plus dur, tu aurais r\u00e9ussi ton examen."},
+  {arabic:"\u0643\u0633\u0644\u060c \u062a\u0631\u0627\u062e\u060c \u062a\u0628\u0637\u0651\u0644",english:"Inaction. His chronic laziness prevented him from completing his assignments on time.",french:"Inaction. Sa paresse chronique l'a emp\u00each\u00e9 de terminer ses t\u00e2ches \u00e0 temps."},
+  {arabic:"\u0647\u0630\u0627 \u0627\u0644\u0648\u0642\u062a \u0627\u0644\u0645\u0645\u062a\u0639 \u0644\u0645 \u064a\u062f\u0645 \u0637\u0648\u064a\u0644\u0627\u064b",english:"This pleasant time didn't last long",french:"Ce moment agr\u00e9able n'a pas dur\u00e9 longtemps"},
+  {arabic:"\u0647\u0630\u0627 \u0627\u0644\u0628\u0646\u062a\u0647\u0627\u0648\u0633 \u064a\u062d\u062a\u0648\u064a \u0639\u0644\u0649 \u0646\u0638\u0627\u0645 \u062a\u0642\u0646\u064a \u0645\u062a\u0637\u0648\u0631 \u062c\u062f\u0627\u064b",english:"This penthouse has a very sophisticated technology system.",french:"Ce penthouse dispose d'un syst\u00e8me technologique tr\u00e8s sophistiqu\u00e9."},
+  {arabic:"\u0648\u062c\u0647\u0643 \u0642\u0627\u0633\u062d",english:"You got audacity",french:"Tu as du culot"},
+  {arabic:"\u062a\u0633\u0628\u0628 \u062a\u0645\u0627\u0637\u0644\u0647 \u0627\u0644\u0645\u0633\u062a\u0645\u0631 \u0641\u064a \u0641\u0642\u062f\u0627\u0646 \u0627\u0644\u0645\u0648\u0627\u0639\u064a\u062f \u0627\u0644\u0646\u0647\u0627\u0626\u064a\u0629 \u0641\u064a \u0627\u0644\u0639\u0645\u0644",english:"His constant procrastination led to missed deadlines at work.",french:"Sa procrastination constante a entra\u00een\u00e9 des \u00e9ch\u00e9ances manqu\u00e9es au travail."},
+  {arabic:"\u062c\u0631\u064a\u0621",english:"Daring",french:"Audacieux"},
+  {arabic:"\u062d\u0645\u0627\u0633\u064a",english:"Enthusiastic",french:"Enthousiaste"},
+  {arabic:"\u062a\u0633\u0644\u064a\u0637 \u0627\u0644\u0636\u0648\u0621",english:"Shine light",french:"Mettre en lumi\u00e8re"},
+  {arabic:"\u062a\u0646\u0645\u0631",english:"Bullying",french:"Harc\u00e8lement"},
+  {arabic:"\u0628\u0637\u0631\u064a\u0642\u0629 \u0642\u0627\u0628\u0644\u0629 \u0644\u0644\u062a\u0646\u0628\u0624",english:"In a predictable way",french:"De mani\u00e8re pr\u00e9visible"},
+  {arabic:"\u0643\u0645\u0627 \u0647\u0648 \u0645\u062a\u0648\u0642\u0639",english:"As can be expected",french:"Comme on peut s'y attendre"},
+  {arabic:"\u0627\u0644\u0637\u0631\u064a\u0642\u0629 \u0627\u0644\u062a\u064a \u062a\u0648\u0642\u0639\u0647\u0627 \u0627\u0644\u062c\u0645\u064a\u0639",english:"The way everyone expected",french:"La fa\u00e7on dont tout le monde s'y attendait"},
+  {arabic:"\u0623\u064a\u0646 \u0623\u0642\u064a\u0645\u062a \u062d\u0641\u0644\u0629 \u062c\u0648\u0627\u0626\u0632 \u0627\u0644\u0645\u0648\u0633\u064a\u0642\u0649 \u0627\u0644\u0623\u0645\u0631\u064a\u0643\u064a\u0629 \u0644\u0639\u0627\u0645 2020\u061f",english:"Where did the American Music Awards (AMAs) take place in 2020?",french:"O\u00f9 ont eu lieu les American Music Awards en 2020 ?"},
+  {arabic:"\u062a\u0645 \u0628\u0646\u0627\u0621 \u0627\u0644\u0645\u0639\u0628\u062f \u0627\u0644\u0642\u062f\u064a\u0645 \u0644\u062a\u0642\u062f\u064a\u0633 \u0627\u0644\u0622\u0644\u0647\u0629",english:"The ancient temple was built for the sanctification of the gods.",french:"Le temple ancien a \u00e9t\u00e9 construit pour la sanctification des dieux."},
+  {arabic:"\u0627\u0644\u062c\u0634\u0639",english:"Greed",french:"Avarice"},
+  {arabic:"\u063a\u0636\u0628",english:"Anger",french:"Col\u00e8re"},
+  {arabic:"\u0623\u062f\u0648\u0627\u062a",english:"Tools",french:"Outils"},
+  {arabic:"\u0627\u0644\u0639\u0642\u0648\u0644 \u0627\u0644\u0646\u064a\u0631\u0629",english:"Bright minds",french:"Les esprits brillants"},
+  {arabic:"\u0627\u0644\u0627\u0633\u062a\u0641\u0632\u0627\u0632",english:"Provocation",french:"Provocation"},
+  {arabic:"\u0627\u0641\u062a\u0631\u0627\u0636\u064a",english:"Virtual",french:"Virtuel"},
+  {arabic:"\u062a\u0633\u0648\u064a\u0642",english:"Marketing",french:"Marketing"},
 ];
 // Remembered state
 let rememberedStates = {};
