--- a/part 7_en.html
+++ b/part 7_en.html
@@ -147,27 +147,20 @@ h1{text-align:center;margin-bottom:1rem;font-size:1.8rem}
 
 <script>
 const cards = [
-  {arabic:"\u0645\u0646 \u062d\u064a\u0646 \u0625\u0644\u0649 \u0622\u062e\u0631",english:"Occasional",french:"Occasionnel"},
-  {arabic:"\u063a\u064a\u0631 \u0631\u0633\u0645\u064a",english:"Casual",french:"Informel"},
-  {arabic:"\u0634\u062d\u0627\u0644 \u062f\u0627\u0628\u0627 \u0645\u0646 \u0643\u064a\u0644\u0648\u0645\u062a\u0631 \u063a\u0627\u062f\u064a \u0646\u0643\u0648\u0646\u0648\u0627 \u0636\u0631\u0628\u0646\u0627 \u062f\u0627\u0628\u0627",english:"How many miles have we driven by now?",french:"Combien de kilom\u00e8tres avons-nous parcouru maintenant ?"},
-  {arabic:"\u0643\u0627\u0646 \u0643\u064a\u062c\u0631\u064a \u0628\u0643\u0644 \u0642\u0635\u0631 \u062c\u0647\u062f\u0647",english:"He was running as fast as he could",french:"Il courait aussi vite qu'il pouvait"},
-  {arabic:"\u0623\u0644\u0645 \u0623\u0631\u0633\u0644\u0643 \u0644\u062a\u0630\u0647\u0628\u064a \u0648\u062a\u0646\u0627\u062f\u064a \u0644\u062c\u062f\u0643 \u0645\u0646 \u0623\u062c\u0644 \u0627\u0644\u0639\u0634\u0627\u0621",english:"Didn't I send you to call Grandpa for dinner?",french:"Ne t'ai-je pas envoy\u00e9e appeler grand-p\u00e8re pour le d\u00eener ?"},
-  {arabic:"\u0630\u0646\u0648\u0628",english:"Sins",french:"P\u00e9ch\u00e9s"},
-  {arabic:"\u0627\u0633\u062a\u0637\u0644\u0627\u0639 \u0627\u0644\u0631\u0623\u064a \u0627\u0644\u0639\u0627\u0645",english:"Opinion poll",french:"Sondage d'opinion"},
-  {arabic:"\u0647\u0630\u0627 \u0627\u0644\u0641\u064a\u0631\u0648\u0633 \u0642\u062f \u0623\u0638\u0647\u0631 \u0644\u0646\u0627 \u0627\u0644\u0639\u062f\u064a\u062f \u0645\u0646 \u0627\u0644\u0623\u0645\u0648\u0631",english:"This virus has shown us a lot of things",french:"Ce virus nous a montr\u00e9 beaucoup de choses"},
-  {arabic:"\u062d\u0633\u0646\u0629",english:"Good deed",french:"Bonne action"},
-  {arabic:"\u0627\u0644\u062a\u0641\u0627\u0647\u0629",english:"Insignificance",french:"Insignifiance"},
-  {arabic:"\u0627\u0644\u062d\u0643\u0648\u0645\u0629 \u062a\u0641\u0631\u0636 \u0627\u0644\u0642\u0627\u0646\u0648\u0646",english:"The government enforces the law",french:"Le gouvernement applique la loi"},
-  {arabic:"\u0625\u0646\u0647\u0645 \u064a\u062d\u0627\u0648\u0644\u0648\u0646 \u062a\u062d\u0631\u064a\u0641 \u0648\u0642\u0627\u0626\u0639 \u062a\u0627\u0631\u064a\u062e\u064a\u0629",english:"They intend to distort historical facts",french:"Ils cherchent \u00e0 d\u00e9former les faits historiques"},
-  {arabic:"\u0639\u0646\u062f\u0645\u0627 \u0627\u0633\u062a\u0648\u0644\u062a \u0627\u0644\u062c\u064a\u0648\u0634 \u0627\u0644\u0628\u0631\u064a\u0637\u0627\u0646\u064a\u0629 \u0639\u0644\u0649 \u0643\u064a\u0628\u064a\u0643 \u0639\u0627\u0645 1759",english:"When the British armies captured Quebec in 1759",french:"Lorsque les arm\u00e9es britanniques ont captur\u00e9 Qu\u00e9bec en 1759"},
-  {arabic:"\u0639\u0646\u062f\u0645\u0627 \u062a\u0642\u062a\u0631\u0628 \u0639\u0637\u0644\u0629 \u0631\u0623\u0633 \u0627\u0644\u0633\u0646\u0629 \u062f\u0627\u0626\u0645\u0627\u064b \u0646\u0634\u0639\u0631 \u0628\u0627\u0644\u0633\u0639\u0627\u062f\u0629",english:"When New Year's holiday approaches, we always feel happy",french:"Quand les vacances du Nouvel An approchent, nous ressentons toujours de la joie"},
-  {arabic:"\u064a\u0631\u063a\u0628\u0648\u0646 \u0641\u064a \u0627\u0633\u062a\u063a\u0644\u0627\u0644 \u0627\u0644\u0639\u062f\u064a\u062f \u0645\u0646 \u0627\u0644\u0623\u0645\u0648\u0631 \u0639\u0644\u0649 \u062d\u0633\u0627\u0628 \u0627\u0644\u0646\u0627\u0633",english:"They want to exploit many things at the expense of the people",french:"Ils veulent exploiter de nombreuses choses au d\u00e9triment des gens"},
-  {arabic:"\u062a\u062c\u0627\u0647\u0644 \u0634\u062e\u0635 \u0628\u0627\u0632\u062f\u0631\u0627\u0621: \u0627\u0644\u0631\u0626\u064a\u0633 \u062a\u062c\u0627\u0647\u0644 \u0643\u0644 \u0627\u0642\u062a\u0631\u0627\u062d \u0642\u062f\u0645\u0647 \u062a\u0648\u0645",english:"The boss snubbed every suggestion Tom made",french:"Le patron a ignor\u00e9 toutes les suggestions faites par Tom"},
-  {arabic:"\u0639\u0644\u0645 \u0627\u0644\u0641\u0644\u0643",english:"Astronomy",french:"Astronomie"},
-  {arabic:"\u0635\u0646\u062f\u0648\u0642 \u0627\u0644\u0646\u0642\u062f \u0627\u0644\u062f\u0648\u0644\u064a",english:"International Monetary Fund",french:"Fonds mon\u00e9taire international"},
-  {arabic:"\u062c\u0644\u062f",english:"Leather",french:"Cuir"},
-  {arabic:"\u0634\u0627\u0631\u0639 \u0636\u064a\u0642",english:"Narrow street",french:"Rue \u00e9troite"},
-  {arabic:"\u0623\u062c\u0646\u062f\u0629 \u0633\u064a\u0627\u0633\u064a\u0629 \u0645\u0639\u064a\u0646\u0629",english:"Political agenda",french:"Agenda politique"},
+  {arabic:"\u062f\u0642\u064a\u0642",english:"Accurate",french:"Pr\u00e9cis"},
+  {arabic:"\u0636\u0627\u0644\u0645 \u0623\u0648 \u0645\u0638\u0644\u0648\u0645",english:"Oppressor or oppressed",french:"Oppresseur ou opprim\u00e9"},
+  {arabic:"\u062d\u0636\u0627\u0646\u0629 \u0627\u0644\u0623\u0637\u0641\u0627\u0644 \u0628\u0639\u062f \u0627\u0644\u0637\u0644\u0627\u0642",english:"Child Custody",french:"La garde des enfants apr\u00e8s divorce"},
+  {arabic:"\u0645\u062c\u0627\u0631\u064a",english:"Sewers",french:"\u00c9gouts"},
+  {arabic:"\u0647\u0636\u0645",english:"Digestion",french:"Digestion"},
+  {arabic:"\u0623\u0646\u0627 \u0643\u0646\u062a \u0639\u0644\u0649 \u0648\u0634\u0643 \u0623\u0646 \u0623\u0635\u0627\u0628 \u0628\u0633\u064a\u0627\u0631\u0629",english:"I almost got hit by a car.",french:"J'\u00e9tais sur le point de me faire renverser"},
+  {arabic:"\u0643\u0646\u062a \u0642\u0631\u064a\u0628\u064b\u0627 \u0645\u0646 \u0623\u0646 \u0623\u0635\u0627\u0628 \u0628\u0633\u064a\u0627\u0631\u0629",english:"I was this close to being hit by a car.",french:"J'\u00e9tais si pr\u00e8s d'\u00eatre percut\u00e9 par une voiture"},
+  {arabic:"\u0645\u063a\u062a\u0631\u0628",english:"Expatriate",french:"Expatri\u00e9"},
+  {arabic:"\u0643\u0631\u0629 \u0627\u0644\u0642\u062f\u0645 \u064a\u0645\u0643\u0646 \u0623\u0646 \u062a\u0632\u064a\u062f \u0627\u0644\u0646\u0627\u062a\u062c \u0627\u0644\u0645\u062d\u0644\u064a",english:"Football can increase GDP by 2% to 5%.",french:"Le football peut augmenter le PIB de 2% \u00e0 5%."},
+  {arabic:"\u0623\u064a\u0646 \u064a\u0645\u0643\u0646 \u0623\u0646 \u0623\u062c\u062f \u0630\u0644\u0643\u061f",english:"Where can I find it?",french:"O\u00f9 est-ce que je peux en trouver ?"},
+  {arabic:"\u062a\u0646\u0648\u0639",english:"Variety",french:"Vari\u00e9t\u00e9"},
+  {arabic:"\u0623\u0628\u0639\u062f\u0647 \u0642\u062f\u0631 \u0627\u0644\u0625\u0645\u0643\u0627\u0646",english:"Keep him as far away as possible",french:"\u00c9loigne-le autant que possible"},
+  {arabic:"\u0645\u0631\u0627\u0642\u0628\u0629 \u0627\u0644\u0623\u0646\u0634\u0637\u0629",english:"Monitoring activities",french:"Suivi des activit\u00e9s"},
+  {arabic:"\u062c\u0631\u062d",english:"Wound",french:"Blessure"},
 ];
 // Remembered state
 let rememberedStates = {};
