--- a/part 8_en.html
+++ b/part 8_en.html
@@ -147,27 +147,32 @@ h1{text-align:center;margin-bottom:1rem;font-size:1.8rem}
 
 <script>
 const cards = [
-  {arabic:"\u0645\u0646 \u062d\u064a\u0646 \u0625\u0644\u0649 \u0622\u062e\u0631",english:"Occasional",french:"Occasionnel"},
-  {arabic:"\u063a\u064a\u0631 \u0631\u0633\u0645\u064a",english:"Casual",french:"Informel"},
-  {arabic:"\u0634\u062d\u0627\u0644 \u062f\u0627\u0628\u0627 \u0645\u0646 \u0643\u064a\u0644\u0648\u0645\u062a\u0631 \u063a\u0627\u062f\u064a \u0646\u0643\u0648\u0646\u0648\u0627 \u0636\u0631\u0628\u0646\u0627 \u062f\u0627\u0628\u0627",english:"How many miles have we driven by now?",french:"Combien de kilom\u00e8tres avons-nous parcouru maintenant ?"},
-  {arabic:"\u0643\u0627\u0646 \u0643\u064a\u062c\u0631\u064a \u0628\u0643\u0644 \u0642\u0635\u0631 \u062c\u0647\u062f\u0647",english:"He was running as fast as he could",french:"Il courait aussi vite qu'il pouvait"},
-  {arabic:"\u0623\u0644\u0645 \u0623\u0631\u0633\u0644\u0643 \u0644\u062a\u0630\u0647\u0628\u064a \u0648\u062a\u0646\u0627\u062f\u064a \u0644\u062c\u062f\u0643 \u0645\u0646 \u0623\u062c\u0644 \u0627\u0644\u0639\u0634\u0627\u0621",english:"Didn't I send you to call Grandpa for dinner?",french:"Ne t'ai-je pas envoy\u00e9e appeler grand-p\u00e8re pour le d\u00eener ?"},
-  {arabic:"\u0630\u0646\u0648\u0628",english:"Sins",french:"P\u00e9ch\u00e9s"},
-  {arabic:"\u0627\u0633\u062a\u0637\u0644\u0627\u0639 \u0627\u0644\u0631\u0623\u064a \u0627\u0644\u0639\u0627\u0645",english:"Opinion poll",french:"Sondage d'opinion"},
-  {arabic:"\u0647\u0630\u0627 \u0627\u0644\u0641\u064a\u0631\u0648\u0633 \u0642\u062f \u0623\u0638\u0647\u0631 \u0644\u0646\u0627 \u0627\u0644\u0639\u062f\u064a\u062f \u0645\u0646 \u0627\u0644\u0623\u0645\u0648\u0631",english:"This virus has shown us a lot of things",french:"Ce virus nous a montr\u00e9 beaucoup de choses"},
-  {arabic:"\u062d\u0633\u0646\u0629",english:"Good deed",french:"Bonne action"},
-  {arabic:"\u0627\u0644\u062a\u0641\u0627\u0647\u0629",english:"Insignificance",french:"Insignifiance"},
-  {arabic:"\u0627\u0644\u062d\u0643\u0648\u0645\u0629 \u062a\u0641\u0631\u0636 \u0627\u0644\u0642\u0627\u0646\u0648\u0646",english:"The government enforces the law",french:"Le gouvernement applique la loi"},
-  {arabic:"\u0625\u0646\u0647\u0645 \u064a\u062d\u0627\u0648\u0644\u0648\u0646 \u062a\u062d\u0631\u064a\u0641 \u0648\u0642\u0627\u0626\u0639 \u062a\u0627\u0631\u064a\u062e\u064a\u0629",english:"They intend to distort historical facts",french:"Ils cherchent \u00e0 d\u00e9former les faits historiques"},
-  {arabic:"\u0639\u0646\u062f\u0645\u0627 \u0627\u0633\u062a\u0648\u0644\u062a \u0627\u0644\u062c\u064a\u0648\u0634 \u0627\u0644\u0628\u0631\u064a\u0637\u0627\u0646\u064a\u0629 \u0639\u0644\u0649 \u0643\u064a\u0628\u064a\u0643 \u0639\u0627\u0645 1759",english:"When the British armies captured Quebec in 1759",french:"Lorsque les arm\u00e9es britanniques ont captur\u00e9 Qu\u00e9bec en 1759"},
-  {arabic:"\u0639\u0646\u062f\u0645\u0627 \u062a\u0642\u062a\u0631\u0628 \u0639\u0637\u0644\u0629 \u0631\u0623\u0633 \u0627\u0644\u0633\u0646\u0629 \u062f\u0627\u0626\u0645\u0627\u064b \u0646\u0634\u0639\u0631 \u0628\u0627\u0644\u0633\u0639\u0627\u062f\u0629",english:"When New Year's holiday approaches, we always feel happy",french:"Quand les vacances du Nouvel An approchent, nous ressentons toujours de la joie"},
-  {arabic:"\u064a\u0631\u063a\u0628\u0648\u0646 \u0641\u064a \u0627\u0633\u062a\u063a\u0644\u0627\u0644 \u0627\u0644\u0639\u062f\u064a\u062f \u0645\u0646 \u0627\u0644\u0623\u0645\u0648\u0631 \u0639\u0644\u0649 \u062d\u0633\u0627\u0628 \u0627\u0644\u0646\u0627\u0633",english:"They want to exploit many things at the expense of the people",french:"Ils veulent exploiter de nombreuses choses au d\u00e9triment des gens"},
-  {arabic:"\u062a\u062c\u0627\u0647\u0644 \u0634\u062e\u0635 \u0628\u0627\u0632\u062f\u0631\u0627\u0621: \u0627\u0644\u0631\u0626\u064a\u0633 \u062a\u062c\u0627\u0647\u0644 \u0643\u0644 \u0627\u0642\u062a\u0631\u0627\u062d \u0642\u062f\u0645\u0647 \u062a\u0648\u0645",english:"The boss snubbed every suggestion Tom made",french:"Le patron a ignor\u00e9 toutes les suggestions faites par Tom"},
-  {arabic:"\u0639\u0644\u0645 \u0627\u0644\u0641\u0644\u0643",english:"Astronomy",french:"Astronomie"},
-  {arabic:"\u0635\u0646\u062f\u0648\u0642 \u0627\u0644\u0646\u0642\u062f \u0627\u0644\u062f\u0648\u0644\u064a",english:"International Monetary Fund",french:"Fonds mon\u00e9taire international"},
-  {arabic:"\u062c\u0644\u062f",english:"Leather",french:"Cuir"},
-  {arabic:"\u0634\u0627\u0631\u0639 \u0636\u064a\u0642",english:"Narrow street",french:"Rue \u00e9troite"},
-  {arabic:"\u0623\u062c\u0646\u062f\u0629 \u0633\u064a\u0627\u0633\u064a\u0629 \u0645\u0639\u064a\u0646\u0629",english:"Political agenda",french:"Agenda politique"},
+  {arabic:"\u0627\u0644\u0645\u0639\u0631\u0636",english:"Exposition",french:"Exposition"},
+  {arabic:"\u0628\u0644\u062f \u064a\u062d\u062a\u0636\u0631",english:"A country in agony",french:"Pays en agonie"},
+  {arabic:"\u0645\u0643\u0634\u0648\u0641",english:"Exposed",french:"Expos\u00e9"},
+  {arabic:"\u0627\u0644\u0645\u0624\u062a\u0645\u0631",english:"The conference",french:"La conf\u00e9rence"},
+  {arabic:"\u062a\u0634\u0647\u064a\u0631\u064a",english:"Defamatory",french:"Diffamatoire"},
+  {arabic:"\u0623\u0639\u062a\u0642\u062f \u0623\u0646\u0646\u064a \u0623\u064f\u0633\u062a\u0647\u062f\u0641 \u0645\u0646 \u0642\u0628\u0644 \u0627\u0644\u0625\u0639\u0644\u0627\u0645",english:"I think I am being targeted by the media right now.",french:"Je pense \u00eatre la cible des m\u00e9dias pour le moment."},
+  {arabic:"\u0623\u062a\u0633\u0627\u0621\u0644 \u0645\u0646 \u0627\u0644\u0630\u064a \u0633\u0631\u0628 \u0647\u0630\u0647 \u0627\u0644\u0645\u0639\u0644\u0648\u0645\u0627\u062a",english:"I wonder who leaked this kind of information.",french:"Je me demande qui a divulgu\u00e9 ce genre d'information."},
+  {arabic:"\u0623\u062a\u0633\u0627\u0621\u0644 \u0645\u0646 \u0627\u0644\u0630\u064a \u0623\u0641\u0634\u0649 \u0647\u0630\u0627 \u0627\u0644\u0646\u0648\u0639 \u0645\u0646 \u0627\u0644\u0645\u0639\u0644\u0648\u0645\u0627\u062a",english:"I wonder who spilled this kind of info.",french:"Je me demande qui a balanc\u00e9 ce genre d'info."},
+  {arabic:"\u0625\u0630\u0627 \u062d\u062f\u062b \u0630\u0644\u0643 \u0641\u064a \u0627\u0644\u0648\u0627\u0642\u0639 \u0642\u062f \u064a\u0641\u0642\u062f \u0627\u0644\u0643\u062b\u064a\u0631 \u0645\u0646 \u0631\u062c\u0627\u0644 \u0627\u0644\u0634\u0631\u0637\u0629 \u0648\u0638\u0627\u0626\u0641\u0647\u0645",english:"If this were to happen for real, many police officers might lose their positions.",french:"Si cela arrivait r\u00e9ellement, de nombreux policiers pourraient perdre leur poste."},
+  {arabic:"\u0643\u062a\u0627\u0628\u0629 \u0627\u0644\u062a\u0642\u0627\u0631\u064a\u0631 \u064a\u062c\u0628 \u0623\u0646 \u062a\u0643\u0648\u0646 \u0645\u0645\u062a\u0627\u0632\u0629",english:"Report writing has to be excellent",french:"La r\u00e9daction de rapport doit \u00eatre excellente"},
+  {arabic:"\u0634\u0647\u0627\u062f\u0629",english:"Testify",french:"T\u00e9moigner"},
+  {arabic:"\u0631\u062f\u0639",english:"Deter",french:"Dissuader"},
+  {arabic:"\u062a\u0644\u0641\u064a\u0642 \u0644\u064a",english:"Framing me",french:"Me pi\u00e9ger"},
+  {arabic:"\u062c\u0639\u0644\u062a \u0643\u0644 \u0634\u064a\u0621 \u064a\u0647\u0645\u0647\u0627",english:"Taking everything matters to her",french:"Elle prend tout \u00e0 c\u0153ur"},
+  {arabic:"\u0625\u0631\u062b",english:"Legacy",french:"H\u00e9ritage"},
+  {arabic:"\u062d\u0628\u0633\u0648\u0627 \u0627\u0644\u0648\u0642\u062a \u0641\u064a \u0631\u0624\u0648\u0633\u0647\u0645",english:"They locked in time in their heads",french:"Ils sont bloqu\u00e9s dans le pass\u00e9"},
+  {arabic:"\u0645\u062a\u062d\u062f\u064d \u0644\u0644\u063a\u0627\u064a\u0629",english:"So defiant",french:"Tellement d\u00e9fiant"},
+  {arabic:"\u062d\u0627\u0633\u0645",english:"Crucial",french:"Crucial"},
+  {arabic:"\u0648\u0627\u0634\u064d",english:"Snitches",french:"Mouchards"},
+  {arabic:"\u062e\u0632\u0627\u0646\u0629 \u0627\u0644\u062f\u0648\u0644\u0629",english:"State treasury / state coffers",french:"Caisse d'\u00e9tat"},
+  {arabic:"\u0625\u0646\u0647\u0627\u0621 \u0630\u0627\u062a\u064a",english:"Self termination",french:"Auto-terminaison"},
+  {arabic:"\u0645\u062e\u062a\u0631\u0642",english:"Compromised",french:"Compromis"},
+  {arabic:"\u0623\u062f\u0627\u0645",english:"Perpetuated",french:"Perp\u00e9tu\u00e9"},
+  {arabic:"\u0631\u0639\u0627\u0646\u064a",english:"Patronized",french:"Trait\u00e9 avec condescendance"},
+  {arabic:"\u0639\u0627\u0646\u0649 \u0645\u0646\u0647",english:"Endured by",french:"Subi par"},
+  {arabic:"\u0645\u062f\u064a\u0646\u0629 \u0627\u0644\u0645\u0644\u0627\u0647\u064a",english:"Fun fair",french:"F\u00eate foraine"},
 ];
 // Remembered state
 let rememberedStates = {};
