--- a/index_nl.html
+++ b/index_nl.html
@@ -118,7 +118,10 @@
 <body>
   <h1>Nederlands Pages</h1>
   <nav class="grid">
-    
+    <a href="part1_nl.html">Part1</a>
+    <a href="part2_nl.html">Part2</a>
+    <a href="part3_nl.html">Part3</a>
+    <a href="part4_nl.html">Part4</a>
   </nav>
   <div class="return">
     <a href="index.html">← Back to language selection</a>
