--- a/index_en.html
+++ b/index_en.html
@@ -72,9 +72,9 @@
       touch-action: manipulation;
     }
 
-    /* ✔️ Extra space after every row of 4 items */
+    /* ⬇ Extra large space after every 4 tiles */
     .grid a:nth-child(4n) {
-      margin-bottom: 2.5rem;
+      margin-bottom: 5rem;
     }
 
     .grid a:hover  { background: var(--primary); color: #fff }
