--- a/index_nl.html
+++ b/index_nl.html
@@ -101,10 +101,7 @@
   <div class="scroll-buffer"></div>
 
   <nav class="grid">
-    <a href="part1_nl.html">Part1</a>
-    <a href="part2_nl.html">Part2</a>
-    <a href="part3_nl.html">Part3</a>
-    <a href="part4_nl.html">Part4</a>
+    <a href="1_nl.html">1</a>
   </nav>
 
   <div class="scroll-buffer"></div>
